# hexlet-django-blog

./: .gitignore  pyproject.toml
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: admin.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py
hexlet_django_blog/article/templates/: index.html
hexlet_django_blog/article/templates/articles/: index.html  tags_and_id.html
hexlet_django_blog/templates/: about.html  index.html  justpage.html  stupid.html
hexlet_django_blog/templates/articles/: index.html
