[tool.poetry]
name = "hexlet-django-blog"
version = "0.1.0"
description = ""
authors = ["AleksandrKosmylev <alex.kosmylev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
djando = "^0.2"
Django = "^4.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
